K8S-STACK/v2/portus.insecure/3-portus-bg.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: portus-bg
  name: portus-bg
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: portus-bg
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: portus-bg
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master1
      containers:
      - name: portus-bg
        image: opensuse/portus:head
        volumeMounts:
        - mountPath: /certificates:ro
          name: portus-bg-volume
      volumes:
      - name: portus-bg-volume
        hostPath:
          path: /data/f2e-k8s-stack/portus.insecure/secrets
