K8S-STACK/v2/portus.insecure/2-portus.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: portus
  name: portus
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: portus
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: portus
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master1
      containers:
      - name: portus
        image: opensuse/portus:head
        volumeMounts:
        - mountPath: /certificates:ro
          name: portus-volume
        ports:
        - containerPort: 3000
      volumes:
      - name: portus-volume
        hostPath:
          path: /data/f2e-k8s-stack/portus.insecure/secrets
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: portus
  name: portus
  namespace: kube-system
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    k8s-app: portus
